--- a/.eslintrc
+++ b/.eslintrc
@@ -6,7 +6,7 @@
     "es6": true
   },
   "extends": ["airbnb", "prettier", "prettier/react", "plugin:import/warnings"],
-  "plugins": ["prettier", "import", "flowtype"],
+  "plugins": ["prettier", "import"],
   "globals": {
     "document": true,
     "window": true,
@@ -22,7 +22,6 @@
     "$Diff": true
   },
   "rules": {
-    "react/forbid-prop-types": 0,
     "react/jsx-filename-extension": 0,
     "react/react-in-jsx-scope": 0,
     "class-methods-use-this": 0,
@@ -33,17 +32,11 @@
         "allow": ["__REDUX_DEVTOOLS_EXTENSION_COMPOSE__", "_allPostsMeta"]
       }
     ],
-    "react/no-unused-prop-types": 0,
     "consistent-return": 0,
     "jsx-a11y/anchor-is-valid": 0,
     "import/no-extraneous-dependencies": 0,
     "prettier/prettier": "error",
-    "flowtype/define-flow-type": 1,
-    "react/destructuring-assignment": 0
-  },
-  "settings": {
-    "flowtype": {
-      "onlyFilesWithFlowAnnotation": true
-    }
+    "react/destructuring-assignment": 0,
+    "react/prop-types": "off"
   }
 }
