--- a/package.json
+++ b/package.json
@@ -68,29 +68,28 @@
     "js-cookie": "2.2.0",
     "lru-cache": "5.1.1",
     "moment": "2.23.0",
-    "next": "7.0.2",
+    "next": "^10.2.3",
     "next-cookies": "Sly777/next-cookies#master",
     "next-routes": "1.4.2",
     "offline-plugin": "5.0.6",
-    "prop-types": "15.6.2",
-    "react": "16.7.0",
+    "react": "16.7.0-alpha.2",
     "react-apollo": "2.3.3",
-    "react-dom": "16.7.0",
+    "react-dom": "16.7.0-alpha.2",
     "react-helmet": "5.2.0",
     "react-redux": "6.0.0",
     "redux": "4.0.1",
+    "redux-thunk": "^2.3.0",
     "rimraf": "2.6.3",
-    "styled-components": "4.1.3"
+    "styled-components": "4.1.3",
+    "webpack": "4.46.0"
   },
   "devDependencies": {
-    "@babel/plugin-transform-flow-strip-types": "7.2.3",
     "babel-eslint": "10.0.1",
     "cli-clear": "1.0.4",
     "eslint": "5.11.1",
     "eslint-config-airbnb": "17.1.0",
     "eslint-config-prettier": "3.3.0",
     "eslint-loader": "2.1.1",
-    "eslint-plugin-flowtype": "3.2.0",
     "eslint-plugin-graphql": "3.0.1",
     "eslint-plugin-import": "2.14.0",
     "eslint-plugin-jsx-a11y": "6.1.2",
@@ -98,7 +97,6 @@
     "eslint-plugin-react": "7.12.2",
     "eslint-watch": "4.0.2",
     "figlet": "1.2.1",
-    "flow-bin": "0.89.0",
     "graphql-cli": "3.0.4",
     "graphql-cli-voyager": "0.1.3",
     "handlebars": "4.0.12",
