--- a/package.json
+++ b/package.json
@@ -64,18 +64,19 @@
     "graphql": "^14.0.2",
     "helmet": "3.15.0",
     "ip": "1.1.5",
-    "isomorphic-fetch": "2.2.1",
+    "isomorphic-fetch": "^3.0.0",
     "js-cookie": "2.2.0",
     "lru-cache": "5.1.1",
     "moment": "2.23.0",
     "next": "^10.2.3",
-    "next-cookies": "Sly777/next-cookies#master",
+    "next-cookies": "^2.0.3",
     "next-routes": "1.4.2",
     "offline-plugin": "5.0.6",
     "react": "16.7.0-alpha.2",
     "react-apollo": "2.3.3",
     "react-dom": "16.7.0-alpha.2",
     "react-helmet": "5.2.0",
+    "react-icons": "^4.2.0",
     "react-redux": "6.0.0",
     "redux": "4.0.1",
     "redux-thunk": "^2.3.0",
