--- a/package.json
+++ b/package.json
@@ -1,36 +1,100 @@
 {
-  "name": "new-nextjsapp",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start"
-  },
-  "dependencies": {
-    "compression": "^1.7.4",
-    "cors": "^2.8.5",
-    "dotenv": "^10.0.0",
-    "express": "^4.17.1",
-    "firebase": "^8.6.8",
-    "fs": "^0.0.1-security",
-    "helmet": "^4.6.0",
-    "js-cookie": "^2.2.1",
-    "localforage": "^1.9.0",
-    "lru-cache": "^6.0.0",
-    "next": "10.2.3",
-    "next-cookies": "^2.0.3",
-    "path": "^0.12.7",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "react-hot-toast": "^2.0.0",
-    "react-icons": "^4.2.0",
-    "tailwindcss": "^2.1.4"
-  },
-  "devDependencies": {
-    "@babel/plugin-proposal-optional-chaining": "^7.14.5",
-    "autoprefixer": "^10.2.6",
-    "eslint-plugin-react-hooks": "^4.2.0",
-    "postcss": "^8.3.0"
-  }
+    "name": "new-nextjsapp",
+    "version": "0.1.0",
+    "private": true,
+    "author": "Sachin Kumar",
+    "pre-commit": "lint-staged",
+    "scripts": {
+        "start": "cross-env NODE_ENV=production node server.js",
+        "start:multicore": "cross-env NODE_ENV=production pm2 start server.js -i max --attach",
+        "build": "npm run clean-cache && next build",
+        "clean-cache": "rimraf -rf ./node_modules/.cache",
+        "dev": "npm run clean-cache && node server.js",
+        "lint": "eslint --fix --ext .js pages components containers libraries server helper_scripts",
+        "lint:watch": "esw -w --fix components libraries server",
+        "analyze": "cross-env ANALYZE_BUILD=true npm run build",
+        "setup": "node ./helper_scripts/CL_commands/setup.js && npm run setup:after",
+        "setup:clean": "cross-env CLEANSETUP=true node ./helper_scripts/CL_commands/setup.js && npm run setup:after",
+        "setup:after": "npm run build",
+        "create:page": "node ./helper_scripts/CL_commands/create_page.js",
+        "create:route": "node ./helper_scripts/CL_commands/create_route.js",
+        "create:container": "node ./helper_scripts/CL_commands/create_container.js",
+        "create:component": "node ./helper_scripts/CL_commands/create_component.js",
+        "lint-staged": "lint-staged",
+        "heroku-postbuild": "npm run build",
+        "prestart": "npm run build",
+        "release": "release",
+        "graphql:play": "graphql playground",
+        "graphql:update_schema": "graphql get-schema",
+        "graphql:see_graph": "graphql voyager",
+        "build:static_export": "cross-env STATIC_EXPORT=true npm run build && cross-env STATIC_EXPORT=true next export",
+        "zip-for-beanstalk": "npm prune --production && zip -qr ran-boilerplate.zip . -x \"*.zip\""
+    },
+    "dependencies": {
+        "@headlessui/react": "^1.2.0",
+        "apollo-boost": "0.1.23",
+        "apollo-client-preset": "1.0.8",
+        "babel-plugin-import-graphql": "2.6.2",
+        "chalk": "2.4.1",
+        "color": "3.1.0",
+        "compression": "^1.7.4",
+        "cors": "^2.8.5",
+        "dotenv": "^10.0.0",
+        "express": "^4.17.1",
+        "firebase": "^8.6.8",
+        "fs": "^0.0.1-security",
+        "graphql": "^14.0.2",
+        "helmet": "^4.6.0",
+        "ip": "1.1.5",
+        "js-cookie": "^2.2.1",
+        "localforage": "^1.9.0",
+        "lru-cache": "^6.0.0",
+        "next": "10.2.3",
+        "next-cookies": "^2.0.3",
+        "next-routes": "^1.4.2",
+        "path": "^0.12.7",
+        "react": "17.0.2",
+        "react-apollo": "2.3.3",
+        "react-dom": "17.0.2",
+        "react-hot-toast": "^2.0.0",
+        "react-icons": "^4.2.0",
+        "rimraf": "2.6.3",
+        "styled-components": "^5.3.0",
+        "tailwindcss": "^2.1.4"
+    },
+    "devDependencies": {
+        "@babel/plugin-proposal-optional-chaining": "^7.14.5",
+        "autoprefixer": "^10.2.6",
+        "babel-eslint": "10.0.1",
+        "eslint": "5.11.1",
+        "eslint-config-airbnb": "17.1.0",
+        "eslint-config-prettier": "3.3.0",
+        "eslint-loader": "2.1.1",
+        "eslint-plugin-graphql": "3.0.1",
+        "eslint-plugin-import": "2.14.0",
+        "eslint-plugin-jsx-a11y": "6.1.2",
+        "eslint-plugin-prettier": "3.0.1",
+        "eslint-plugin-react": "7.12.2",
+        "eslint-plugin-react-hooks": "^4.2.0",
+        "eslint-watch": "4.0.2",
+        "figlet": "1.2.1",
+        "graphql-cli": "3.0.4",
+        "graphql-cli-voyager": "0.1.3",
+        "handlebars": "4.0.12",
+        "husky": "1.3.1",
+        "inquirer": "6.2.1",
+        "lint-staged": "8.1.0",
+        "ngrok": "3.1.0",
+        "postcss": "^8.3.0",
+        "pre-commit": "1.2.2",
+        "prettier": "1.15.3",
+        "replace-in-file": "3.4.2",
+        "shelljs": "0.8.3",
+        "webpack-bundle-analyzer": "3.0.3"
+    },
+    "husky": {
+        "hooks": {
+            "pre-commit": "lint-staged"
+        }
+    }
 }
